chore: fix alignment when using mdi icons + text in slick-cell

--- a/packages/common/src/styles/slick-grid.scss
+++ b/packages/common/src/styles/slick-grid.scss
@@ -524,6 +524,11 @@
           background-color: currentColor;
         }
       }
+      // fix alignment when slick-cell includes slickgrid icons (align bottom will in fact center the icon & text), for example Tree Data/Grouping
+      .slick-group-toggle,
+      .mdi {
+        vertical-align: bottom;
+      }
     }
   }
 
